Refatoração do codigo, atribuindo responsabilidades unicas
