# src/main/java/com/santander/bp/integration/delegate/OffersAndRatesApiDelegateImpl.java
@@ -1,8 +1,7 @@
 package com.santander.bp.integration.delegate;
 
 import com.santander.bp.api.OffersAndRatesApiDelegate;
-import com.santander.bp.exception.AltairException;
-import com.santander.bp.model.Error;
+import com.santander.bp.exception.RestApiException;
 import com.santander.bp.model.Error.LevelEnum;
 import com.santander.bp.model.Errors;
 import com.santander.bp.model.OffersPricingRequest;
@@ -11,6 +10,8 @@ import com.santander.bp.model.ResponseWrapper;
 import com.santander.bp.service.CosmosDbService;
 import com.santander.bp.service.OffersPricingServiceBP82;
 import com.santander.bp.service.whitelist.WhitelistService;
+import com.santander.bp.util.ErrorBuilderUtil;
+import com.santander.bp.util.ResponseBuilderUtil;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -29,71 +30,87 @@ public class OffersAndRatesApiDelegateImpl implements OffersAndRatesApiDelegate 
 
   @Override
   public CompletableFuture<ResponseEntity<ResponseWrapper>> offersPost(
-      OffersPricingRequest offersPricingRequest, Integer limit, Integer offset) {
-
-    return CompletableFuture.supplyAsync(
-        () -> {
-          try {
-            return handleOffersRequest(offersPricingRequest);
-          } catch (AltairException e) {
-            return buildErrorResponse(
-                e.getCode(), e.getMessage(), e.getDescription(), HttpStatus.BAD_REQUEST);
-          } catch (Exception e) {
-            return buildErrorResponse(
-                "500", "Internal Server Error", e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
-          }
-        });
-  }
-
-  private ResponseEntity<ResponseWrapper> handleOffersRequest(
       OffersPricingRequest offersPricingRequest) {
-    String documentNumber = offersPricingRequest.getDocumentNumber();
-    String centerId = offersPricingRequest.getCenterId();
 
-    List<OffersPricingResponse> offers;
+    CompletableFuture<ResponseEntity<ResponseWrapper>> future = new CompletableFuture<>();
 
-    if (whitelistService.isInWhitelist(documentNumber, centerId)) {
-      offers =
-          cosmosDbService.getOffers(
-              offersPricingRequest.getSegment(), offersPricingRequest.getChannel(), "26");
+    try {
+      String documentNumber = offersPricingRequest.getDocumentNumber();
+      String centerId = offersPricingRequest.getCenterId();
 
-      if (offers.isEmpty()) {
-        return buildErrorResponse(
-            "NOT_LIST_ERROR",
-            "No offers found",
-            "No offers were found with the specified criteria in CosmosDB",
-            HttpStatus.NOT_FOUND);
+      if (whitelistService.isInWhitelist(documentNumber, centerId)) {
+        // Processamento para clientes da whitelist: ofertas do CosmosDB
+        try {
+          List<OffersPricingResponse> cosmosOffers =
+              cosmosDbService.getOffers(
+                  offersPricingRequest.getSegment(), offersPricingRequest.getChannel(), "26");
+
+          if (cosmosOffers.isEmpty()) {
+            // Nenhuma oferta encontrada
+            Errors errorResponse =
+                ErrorBuilderUtil.buildNotFoundError(
+                    "No offers were found with the specified criteria in CosmosDB");
+            future.complete(
+                ResponseBuilderUtil.buildErrorResponse(errorResponse, HttpStatus.NOT_FOUND));
+          } else {
+            // Sucesso: Retornar as ofertas encontradas
+            future.complete(ResponseBuilderUtil.buildSuccessResponse(cosmosOffers));
+          }
+        } catch (RestApiException e) {
+          // Capturando o erro específico do CosmosDbService
+          Errors errorResponse =
+              ErrorBuilderUtil.buildError(
+                  e.getCode(), e.getMessage(), e.getTitle(), LevelEnum.ERROR);
+          future.complete(
+              ResponseBuilderUtil.buildErrorResponse(errorResponse, HttpStatus.NOT_FOUND));
+        }
+      } else {
+        // Processamento para clientes fora da whitelist
+        handleNonWhitelistCase(offersPricingRequest, future);
       }
-    } else {
-      offers = offersPricingServiceBP82.processOffers(offersPricingRequest);
+    } catch (RestApiException e) {
+      Errors errorResponse =
+          ErrorBuilderUtil.buildError(e.getCode(), e.getMessage(), e.getTitle(), LevelEnum.ERROR);
+      future.complete(ResponseBuilderUtil.buildErrorResponse(errorResponse, e.getHttpStatus()));
+    } catch (Exception e) {
+      Errors errorResponse = ErrorBuilderUtil.buildServerError(e.getMessage());
+      future.complete(
+          ResponseBuilderUtil.buildErrorResponse(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR));
     }
 
-    return buildSuccessResponse(offers);
+    return future;
   }
 
-  private ResponseEntity<ResponseWrapper> buildErrorResponse(
-      String code, String message, String description, HttpStatus status) {
-    Errors errorResponse =
-        Errors.builder()
-            .errors(
-                List.of(
-                    Error.builder()
-                        .code(code)
-                        .message(message)
-                        .level(LevelEnum.ERROR)
-                        .description(description)
-                        .build()))
-            .build();
+  private void handleNonWhitelistCase(
+      OffersPricingRequest offersPricingRequest,
+      CompletableFuture<ResponseEntity<ResponseWrapper>> future) {
 
-    ResponseWrapper responseWrapper =
-        ResponseWrapper.builder().errors(errorResponse.getErrors()).build();
+    try {
+      List<OffersPricingResponse> response =
+          offersPricingServiceBP82.processOffers(offersPricingRequest);
 
-    return ResponseEntity.status(status).body(responseWrapper);
-  }
-
-  private ResponseEntity<ResponseWrapper> buildSuccessResponse(List<OffersPricingResponse> offers) {
-    ResponseWrapper responseWrapper = ResponseWrapper.builder().data(offers).build();
-
-    return ResponseEntity.ok(responseWrapper);
+      if (response.isEmpty()) {
+        Errors errorResponse =
+            ErrorBuilderUtil.buildError(
+                "NOT_FOUND",
+                "No offers found",
+                "No offers were found for the given criteria.",
+                LevelEnum.INFO);
+        future.complete(
+            ResponseBuilderUtil.buildErrorResponse(errorResponse, HttpStatus.NOT_FOUND));
+      } else {
+        future.complete(ResponseBuilderUtil.buildSuccessResponse(response));
+      }
+    } catch (RestApiException e) {
+      // Capturando RestApiException do processo não-whitelist
+      Errors errorResponse =
+          ErrorBuilderUtil.buildError(e.getCode(), e.getMessage(), e.getTitle(), LevelEnum.ERROR);
+      future.complete(
+          ResponseBuilderUtil.buildErrorResponse(errorResponse, HttpStatus.BAD_REQUEST));
+    } catch (Exception e) {
+      Errors errorResponse = ErrorBuilderUtil.buildServerError(e.getMessage());
+      future.complete(
+          ResponseBuilderUtil.buildErrorResponse(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR));
+    }
   }
 }
